@@ -38,6 +38,7 @@ Enhancements
  * Added a new config flag: vlan.trap_limit to enable/disable the trap limit feature
  * RADIUS captive portal authentication can now target several RADIUS servers for fault tolerance
  * Added a multi-threaded EAP test script in t/stress-test/
+ * Performance: node_view query optimized for 100x+ gain in environments where MySQL is taking a lot of CPU
 
 Bug Fixes
  * Buttons in graphs.php of type ifoctetshistoryswitch, ifoctetshistoryuser, ifoctetshistorymac (#1110)
